# tacozip

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  coverage.yml
.github/workflows/: test_py.yml  wheel.yml
R/: tacozip.R
clients/R/: DESCRIPTION  NAMESPACE
clients/julia/: Tacozip.jl
clients/python/: MANIFEST.in  README.md  prebuild.py  pyproject.toml  pytest.ini  setup.py
clients/python/tacozip/: __init__.py  __main__.py  _self_check.py  bindings.py  config.py  exceptions.py  loader.py  version.py
clients/python/tests/: conftest.py  test_bindings.py  test_config.py  test_edge_cases.py  test_exceptions.py  test_integration.py  test_version.py
cmake/: tacozip.pc.in  tacozipConfig.cmake.in
include/: tacozip.h  tacozip_config.h.in
matlab/: tacozip_mex.c
python/: MANIFEST.in  pyproject.toml  setup.py
python/tacozip/: __init__.py
src/: tacozip.c  tacozip_readme.md
