[project]
name = "tacozip"
version = "0.1.0"
requires-python = ">=3.9"
description = "Fast ZIP-like container with ghost metadata"
readme = "README.md"
authors = [{ name = "Cesar Aybar" }]

# Use classifiers for license instead of the problematic license field
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tacozip"]

[tool.setuptools.package-data]
tacozip = ["libtacozip.*", "tacozip.dll"]

#[tool.scikit-build]
#wheel.packages = ["clients/python"]
#editable.mode = "redirect"
#sdist.include = [
#  "CMakeLists.txt",
#  "src/**",
#  "include/**",
#  "cmake/**",
#  "clients/python/**",
#  "README.md",
#  "LICENSE",
#]

#[tool.scikit-build.cmake]
#source-dir = "../.."

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"