[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacozip"
version = "0.4.0"
description = "TACO ZIP: ZIP64 archive with TACO Ghost supporting up to 7 metadata entries"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Cesar Aybar", email = "csaybar@gmail.com" }
]
keywords = ["zip", "zip64", "compression", "archive", "parquet", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]

[project.urls]
Homepage = "https://tacofoundation.github.io/"
Repository = "https://github.com/tacofoundation/tacozip"
Issues = "https://github.com/tacofoundation/tacozip/issues"

[project.scripts]
tacozip = "tacozip.__main__:main"

[tool.setuptools]
packages = ["tacozip"]
include-package-data = true

[tool.setuptools.package-data]
tacozip = ["*.so", "*.dll", "*.dylib"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
